--- a/manpages/man7/springboot-systemd.7
+++ b/manpages/man7/springboot-systemd.7
@@ -31,13 +31,49 @@ simplify Java Spring Boot application services operations such as start, stop, s
 and to allow applications to be started at boot time.
 .PP
 
-.SH Template service unit 
-.PP
+.SH systemd units
 .PP
 
-.SH Target units
+.SS Template service unit 
 .PP
+\fBspringboot@.service\fR
+.RS 4
+This unit is a template unit designed to manage all Spring Boot applications the same way in terms
+of service operations.
 .PP
+The service unit relies on the MANDATORY files/directories:
+.RS 4
+- /opt/springboot/<\fIinstance name\fR>: main installation directory for a specific Spring Boot application
+.br
+- /opt/springboot/<\fIinstance name\fR>/env: environment file with paramaters needed by the Java VM
+for a specific Spring Boot application (See example file \fI/usr/share/doc/springboot-systemd/env.SAMPLE\fR)
+.PP
+.RE
+.RS 4
+For a given application named \fIMyApp\fR, the corresponding systemd service inistance is 
+\fBspringboot@\fIMyApp\fR\fB.service\fR.
+.br
+The required environment file is \fB/opt/springboot/\fIMyApp\fB/env\fR
+.RE
+.PP
+
+.SS Target units
+.PP
+\fBspringboot.target\fR
+.RS 4
+This target groups all instances of the \fBspringboot@.service\fR template service unit.
+.br
+It is wanted by the \fBdefault.target\fR unit
+and as such if this target is enabled it will start all the enabled instances at boot time.
+.RE
+.PP
+
+\fBspringboot-shutdown.target\fR
+.RS 4
+This target shuts down all instances of the \fBspringboot@.service\fR template service unit.
+.RE
+.PP
+
 
 .SH Author
 .PP
